[package]
name = "rebalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]} # Making HTTP requests.
futures = "0.3" # Async / await blocks
tokio = {version = "1.12.0", features = ["full"]} # Async runtime
hmac = "0.12.1" # Signing requests with a signature.
sha2 = "0.10.6" # Signing requests with a signature.
hex = "0.4.3" # Convert signature for HTTP headers.
serde_json = "1.0.96" # Converting Configuration file and Objects from API.
serde = {version = "1.0.163", features = ["derive"]} # Converting Configuration file and Objects from API.
toml = {version = "0.7.3", optional = true} # Creating Configuration file.
uuid = {version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"]} # Create Client ID for orders.
async-recursion = "1.0.4" # Recursive async functions require this.
tokio-tungstenite = {version = "0.19.0", features = ["native-tls"]} # WebSocket requirement.
futures-util = "0.3.28" # Required for the WebSocket client.
base64 = "0.21.4"
dotenv = "0.15.0"
serde_urlencoded = "0.7.1"
